fix(refs T30974): drop "brand" from main/alt/highlight tokens

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
@@ -114,5 +114,5 @@
     &__color-3-2 { color: $dp-color-3-2; }
     &__color-3-3 { color: $dp-color-3-3; }
 
-    &__color-active { color: $dp-color-brand-highlight; }
+    &__color-active { color: $dp-color-highlight; }
 }
