--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
@@ -42,7 +42,7 @@
         display: inline-block;
         font-weight: $normal-font-weight;
 
-        color: $dp-color-brand-highlight;
+        color: $dp-color-highlight;
     }
 
     //  contextual help icon
