--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
@@ -16,23 +16,23 @@
     // Brand tokens
     &-brand {
         &-main {
-            color: $dp-color-brand-main;
+            color: $dp-color-main;
         }
 
         &-main-contrast {
-            color: $dp-color-brand-main-contrast;
+            color: $dp-color-main-contrast;
         }
 
         &-alt {
-            color: $dp-color-brand-alt;
+            color: $dp-color-alt;
         }
 
         &-alt-contrast {
-            color: $dp-color-brand-alt-contrast;
+            color: $dp-color-alt-contrast;
         }
 
         &-highlight {
-            color: $dp-color-brand-highlight;
+            color: $dp-color-highlight;
         }
 
         &-cta-dark {
@@ -140,23 +140,23 @@
     // Brand tokens
     &-brand {
         &-main {
-            background-color: $dp-color-brand-main;
+            background-color: $dp-color-main;
         }
 
         &-main-contrast {
-            background-color: $dp-color-brand-main-contrast;
+            background-color: $dp-color-main-contrast;
         }
 
         &-alt {
-            background-color: $dp-color-brand-alt;
+            background-color: $dp-color-alt;
         }
 
         &-alt-contrast {
-            background-color: $dp-color-brand-alt-contrast;
+            background-color: $dp-color-alt-contrast;
         }
 
         &-highlight {
-            background-color: $dp-color-brand-highlight;
+            background-color: $dp-color-highlight;
         }
     }
 
