--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color.dplan.scss
@@ -54,18 +54,18 @@ $dp-token-color-brand-cta-contrast:             $dp-color-white !default;
 // The [header] tokens style both the page header & main navigation.
 // The value of [header(-<variant>)] should pass AAA contrast check with the value of [header(-<variant>)-contrast].
 // - Default main nav item colors, match fullscreen nav bar background + mobile current item
-$dp-token-color-brand-header:                   $dp-color-brand-main !default;
+$dp-token-color-brand-header:                   $dp-color-main !default;
 $dp-token-color-brand-header-contrast:          $dp-color-white !default;
 // - Highlighted state for main nav items, matches page header colors
-$dp-token-color-brand-header-alt:               $dp-color-brand-alt !default;
+$dp-token-color-brand-header-alt:               $dp-color-alt !default;
 $dp-token-color-brand-header-alt-contrast:      $dp-color-white !default;
 // - Hover state for main nav items, matches :active state for mobile item
 $dp-token-color-brand-header-active:            $dp-color-neutral-light-3 !default;
-$dp-token-color-brand-header-active-contrast:   $dp-color-brand-main !default;
+$dp-token-color-brand-header-active-contrast:   $dp-color-main !default;
 
 // The [nav-alt] tokens control the appearance of branded secondary navigation (project switcher, footer).
-$dp-token-color-brand-nav-alt-link:             $dp-color-brand-main !default;
-$dp-token-color-brand-nav-alt-link-hover:       $dp-color-brand-highlight !default;
+$dp-token-color-brand-nav-alt-link:             $dp-color-main !default;
+$dp-token-color-brand-nav-alt-link-hover:       $dp-color-highlight !default;
 $dp-token-color-brand-nav-alt-alt:              $dp-color-neutral-dark-1 !default;
 $dp-token-color-brand-nav-alt-bg:               $dp-color-neutral-light-3 !default;
 
