--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_actionmenu.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_actionmenu.scss
@@ -171,7 +171,7 @@
         }
 
         &[data-actionmenu-current] {
-            color: $dp-color-brand-highlight;
+            color: $dp-color-highlight;
         }
 
         // The active menu item shall not be interactive
