--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_callout.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_callout.scss
@@ -29,7 +29,7 @@
                 @include inuit-font-size($dp-token-font-size-brand-hero);
             }
 
-            color: $dp-color-brand-main;
+            color: $dp-color-main;
         }
 
         &__subclaim {
@@ -41,7 +41,7 @@
                 @include inuit-font-size($dp-token-font-size-h3, none);
             }
 
-            color: $dp-color-brand-highlight;
+            color: $dp-color-highlight;
         }
 
         //  title container "Als Institution teilnehmen"
