--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_flyout.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_flyout.scss
@@ -16,7 +16,7 @@
 .c-flyout {
     $flyout-trigger-color: $dp-color-interactive-default;
     $flyout-trigger-color-hover: $dp-color-interactive-hover;
-    $flyout-trigger-color-focus: $dp-color-brand-highlight;
+    $flyout-trigger-color-focus: $dp-color-highlight;
 
 
     position: relative;
