--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_multistep.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_multistep.scss
@@ -27,7 +27,7 @@
         $multistep-bg-color: $dp-color-neutral-light-3;
         $multistep-bg-color-active: $dp-color-neutral-light-2;
         $multistep-color: $dp-color-interactive-default;
-        $multistep-color-active: $dp-color-brand-highlight;
+        $multistep-color-active: $dp-color-highlight;
         $multistep-color-disabled: $dp-color-neutral-base;
 
         clear: both;
