--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_sidemenu.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_sidemenu.scss
@@ -37,7 +37,7 @@
 
     .current {
         & > a {
-            color: $dp-color-brand-highlight;
+            color: $dp-color-highlight;
         }
     }
 
