--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitbutton.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitbutton.scss
@@ -109,7 +109,7 @@
             &:focus,
             &:hover,
             &.is-active {
-                color: $dp-color-brand-highlight;
+                color: $dp-color-highlight;
             }
         }
     }
