--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_char-count.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_char-count.scss
@@ -28,7 +28,7 @@
     background: transparent;
     border: none;
 
-    color: $dp-color-brand-highlight;
+    color: $dp-color-highlight;
 
     text-align: center;
 }
