fix(refs T30974): add actionbox overrides to bobsh

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
@@ -62,7 +62,7 @@
         color: $dp-color-text-default;
 
         &:hover {
-            color: $dp-color-interactive-hover;
+            color: $dp-color-highlight;
         }
     }
 }
